<resources>
    <string name="app_name">JusticeCamera</string>
    <string name="title_activity_main" translatable="false">Send Video</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="title_activity_add_violation_location" translatable="false">Map</string>
    <string name="choose_location">Tap on map to set location</string>
    <string name="author_error">Authorization error</string>
    <string name="registration">Registration</string>
    <string name="havebeen_registered">successfully completed</string>
    <string name="sendingVideo">Sending video</string>
    <string name="wait">Please wait...</string>
    <string name="uploadedVideo">Video has been uploaded</string>
    <string name="uploadedViolation">Violation has been sent</string>
    <string name="error_occurred" translatable="false">error has occurred</string>
    <string name="server_error" translatable="false">Server reported an error -</string>
    <string name="added_video">Video has been added</string>
    <string name="video_notselected">Video is not selected</string>
    <string name="add_violation_location">Add location</string>
    <string name="no_moderator_permission">You are not moderator</string>
    <string name="ready_forsend">Everything is ready to send</string>
    <string name="fill_all_data">You must fill out all the data</string>
    <string name="fields_filled">All entry  fields are filled</string>
    <string name="fields_notfilled">You need to fill out all entry fields</string>
    <string name="send_violation">Send violation</string>
    <string name="violation_type">Type of violation</string>
    <string name="v_coordinates_added">Coordinates of violation have been added</string>
    <string name="go_to_video">To go to video details choose marker and click on description</string>
    <string name="dashboard">Dashboard</string>
    <string name="updated_user">User has been updated</string>
    <string name="code">code:</string>
    <string name="approved">Video has been approved</string>
    <string name="rejected">Video has been rejected</string>
    <string name="downloading">Downloading...</string>
    <string name="loading_info">Information is loading</string>
    <string name="end_of_video">End of video</string>
    <string name="media_loaded">Connection is established</string>
    <string name="error_download">Download error:</string>
    <string name="file_downloaded">File downloaded</string>
    <string name="press_to_exit">Press once again to exit</string>
    <string name="videolist_downloading">List of video is loading</string>
    <string name="number_of_elements">Number of elements:</string>
    <string name="add_this_place">Add this place</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="skip">Skip</string>
    <string name="remember">Remember me</string>
    <string name="personal_data">Personal data</string>
    <string name="choose_photo">Choose photo</string>
    <string name="last_name">Last name*</string>
    <string name="first_name">First name*</string>
    <string name="date_of_birth">Date of birth: Day/ Month/ Year</string>
    <string name="car_number">Car number</string>
    <string name="passport_no">Passport No. *</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="phone_number">Phone No. *</string>
    <string name="save">Save</string>
    <string name="violation_information">Violation information</string>
    <string name="video_name">Name of video:</string>
    <string name="car_make">Car make:</string>
    <string name="car_model">Модель автомобиля:</string>
    <string name="car_color">Car color</string>
    <string name="video_comment">Comments</string>
    <string name="watch_video">Watch video</string>
    <string name="download">Download</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="add_location">Add location</string>
    <string name="v_coordinates_notadded">Coordinates of violation not added</string>
    <string name="add_video">+Add video</string>
    <string name="send">Send</string>
    <string name="add_photo">+Add photo</string>
    <string name="photo_count">Number of chosen photos:</string>
    <string name="photos_notchosen">No photos are chosen</string>
    <string name="fill_the_form">Fill in the forms in Dashboard</string>
    <string name="required_fields">*Fields are required</string>
    <string name="updating_user">Uploading data...</string>
    <string name="photo_path_backend" translatable="false">UsersPhoto</string>
    <string name="short_agreement">Agreement</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="public_offer">Public offer</string>
    <string name="checking">Checking...</string>
    <string name="check_email">Please confirm your email address</string>
    <string name="take_from_camera">Take from camera</string>
    <string name="select_from_gallery">Select from gallery</string>
    <string name="select_image">Select image</string>
    <string name="feedback" translatable="false">Feedback</string>


    <string name="login_success_message" translatable="false">Login successful! This concludes an example.</string>

    <string name="login_text" translatable="false">Log in</string>

    <string name="logout_text" translatable="false">Log out</string>

    <string name="register_text">Register</string>

    <string name="restore_link">Restore</string>

    <string name="password_recovered_message">We sent an email to your email address with a link to a password change page. Please check your email and follow the link for further instructions.</string>

    <string name="restore_password_page_name">Password Restoration</string>

    <string name="registration_page_name">Registration</string>

    <string name="login_prompt" translatable="false">Login:</string>

    <string name="password_prompt">Password:</string>

    <string name="password_recovery_page_name" translatable="false">Password Recovery</string>

    <string name="warning_icon_description" translatable="false">warning icon</string>

    <string name="remember_login_text" translatable="false">Remember me</string>

    <string name="carNumber_field_prompt" translatable="false">CarNumber:</string>

    <string name="dayBirthday_field_prompt" translatable="false">DayBirthday:</string>

    <string name="email_field_prompt" translatable="false">Email:</string>

    <string name="firstName_field_prompt" translatable="false">FirstName:</string>

    <string name="lastName_field_prompt" translatable="false">LastName:</string>

    <string name="monthBirthday_field_prompt" translatable="false">MonthBirthday:</string>

    <string name="offerVersion_field_prompt" translatable="false">OfferVersion:</string>

    <string name="passportNo_field_prompt" translatable="false">PassportNo:</string>

    <string name="password_field_prompt">Password:</string>

    <string name="phoneNumber_field_prompt" translatable="false">PhoneNumber:</string>

    <string name="photoUrl_field_prompt" translatable="false">PhotoUrl:</string>

    <string name="rating_field_prompt" translatable="false">Rating:</string>

    <string name="sex_field_prompt" translatable="false">Sex:</string>

    <string name="status_field_prompt" translatable="false">Status:</string>

    <string name="yearBirhday_field_prompt" translatable="false">YearBirhday:</string>

    <string name="registration_confirmation_message">We sent an email to your email address. The email contains a link you must visit to confirm your email address. Once you visit the link, you will be able to login to the application.</string>

    <string name="middle_name">Middle Name*</string>
    <string name="myVideo">My videos</string>
    <string name="leave_feedback">Leave feedback</string>
    <string name="about">About</string>
    <string name="too_large_file">Too large file. File size should be less than 30Mb</string>
    <string name="photo_not_selected">No photos selected</string>
    <string name="photos_added">Photo files added</string>
    <string name="select_folder">Select folder</string>
    <string name="tap_to_select">Tap to select</string>
    <string name="deleting">Deleting...</string>
    <string name="max_size_video">File size should be less than 25Mb</string>
    <string name="notifications_turned_on">Push notifications turned ON</string>
    <string name="notifications_turned_off">Push notifications turned OFF</string>
    <string name="new_violation_added">New violation has been added</string>
    <string name="new_statement">New statement</string>
    <string name="checking_version">Checking app version</string>
    <string name="loading">Loading...</string>
    <string name="logging_in">Logging in...</string>
    <string name="check_internet_connection">Check internet connection</string>
    <string name="update">Update</string>
    <string name="quit">Quit</string>
    <string name="update_application">Please update your application to continue</string>

</resources>
