<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/dp16"
              android:paddingRight="@dimen/dp16"
                android:background="#00838F">


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp4">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp4"
                android:gravity="center"
                android:minHeight="@dimen/dp48">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_dialog_alert"
                    android:layout_marginRight="@dimen/dp4"
                    android:contentDescription="@string/warning_icon_description"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password_recovered_message"
                    android:textSize="@dimen/text_medium"
                    android:textColor="@color/white"
                    android:layout_marginLeft="@dimen/dp4"/>
        </LinearLayout>

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="@dimen/dp144"
                android:layout_height="@dimen/dp48"
                android:text="@string/login_text"
                android:id="@id/loginButton"
                android:layout_marginTop="@dimen/dp4"
                android:height="@dimen/dp40"/>
    </LinearLayout>
</LinearLayout>