<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#00838F"
    >

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:id="@+id/loginButton"
        android:background="@drawable/button"
        android:layout_below="@+id/passwordField"
        android:layout_alignParentStart="true"
        android:textColor="#ffffff" />

    <TextView
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_text"
        android:id="@+id/registerLink"
        android:background="@drawable/button"
        android:linksClickable="false"
        android:singleLine="false"
        android:clickable="true"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/textViewInfo" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordField"
        android:background="@android:drawable/editbox_background_normal"
        android:hint="Password"
        android:textSize="20dp"
        android:inputType="textPassword"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/identityField"
        android:background="@android:drawable/editbox_background_normal"
        android:hint="Email"
        android:textSize="20dp"
        android:inputType="textEmailAddress"
        android:layout_above="@+id/passwordField"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textViewInfo"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:src="@drawable/justice"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember"
        android:textColor="@color/white"
        android:id="@+id/rememberLoginBox"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true" />

    <TextView
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restore_link"
        android:id="@+id/restoreLink"
        android:background="@drawable/button"
        android:clickable="true"
        android:textColor="#ffffff"
        android:layout_below="@+id/rememberLoginBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp" />

</RelativeLayout>
