<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/dp16"
    android:paddingRight="@dimen/dp16"
    android:background="#00838F">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp48"
                android:layout_marginRight="@dimen/dp4"
                android:gravity="left"
                android:paddingRight="@dimen/dp4"
                android:text="@string/email_field_prompt"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium" />

            <EditText

                android:id="@+id/emailField"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp48"
                android:layout_marginLeft="@dimen/dp4"
                android:background="@android:drawable/editbox_background_normal"
                android:gravity="center_vertical"
                android:inputType="text"
                android:textSize="@dimen/text_medium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp48"
                android:layout_marginRight="@dimen/dp4"
                android:paddingRight="@dimen/dp4"
                android:text="@string/password_field_prompt"
                android:textSize="@dimen/text_medium"
                android:textColor="@color/white"
                android:gravity="left"/>

            <EditText

                android:id="@+id/passwordField"
                android:layout_height="@dimen/dp48"
                android:layout_marginLeft="@dimen/dp4"
                android:gravity="center_vertical"
                android:inputType="text"
                android:password="true"
                android:textSize="@dimen/text_medium"
                android:layout_width="match_parent"
                android:background="@android:drawable/editbox_background_normal"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp48"
            android:layout_marginRight="@dimen/dp4"
            android:paddingRight="@dimen/dp4"
            android:text="@string/first_name"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/white"
            android:gravity="left"/>

        <EditText

            android:id="@+id/firstNameField"
            android:layout_height="@dimen/dp48"
            android:layout_marginLeft="@dimen/dp4"
            android:gravity="center_vertical"
            android:inputType="text"
            android:textSize="@dimen/text_medium"
            android:layout_width="match_parent"
            android:background="@android:drawable/editbox_background_normal"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp48"
            android:layout_marginRight="@dimen/dp4"
            android:paddingRight="@dimen/dp4"
            android:text="@string/last_name"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/white"
            android:gravity="left"/>

        <EditText

            android:id="@+id/lastNameField"
            android:layout_height="@dimen/dp48"
            android:layout_marginLeft="@dimen/dp4"
            android:gravity="center_vertical"
            android:inputType="text"
            android:textSize="@dimen/text_medium"
            android:layout_width="match_parent"
            android:background="@android:drawable/editbox_background_normal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp48"
                android:layout_marginRight="@dimen/dp4"
                android:paddingRight="@dimen/dp4"
                android:text="@string/passport_no"
                android:textSize="@dimen/text_medium"
                android:textColor="@color/white"
                android:gravity="left"/>

            <EditText

                android:id="@+id/passportNoField"
                android:layout_height="@dimen/dp48"
                android:layout_marginLeft="@dimen/dp4"
                android:gravity="center_vertical"
                android:inputType="text"
                android:textSize="@dimen/text_medium"
                android:layout_width="match_parent"
                android:background="@android:drawable/editbox_background_normal"/>

            </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp48"
                android:layout_marginRight="@dimen/dp4"
                android:paddingRight="@dimen/dp4"
                android:text="@string/phone_number"
                android:textSize="@dimen/text_medium"
                android:textColor="@color/white"
                android:gravity="left"/>

            <EditText

                android:id="@+id/phoneNumberField"
                android:layout_height="@dimen/dp48"
                android:layout_marginLeft="@dimen/dp4"
                android:gravity="center_vertical"
                android:inputType="phone"
                android:textSize="@dimen/text_medium"
                android:layout_width="match_parent"
                android:background="@android:drawable/editbox_background_normal"/>

            </LinearLayout>

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/registerButton"
            android:layout_width="@dimen/dp144"
            android:layout_height="@dimen/dp48"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp4"
            android:height="@dimen/dp40"
            android:text="@string/register_text"
            android:textSize="@dimen/text_medium" />
    </LinearLayout>
</ScrollView>